server generation refactor attempt
